# 22

./: README.md  pyproject.toml  requirements.txt
accounts/: forms.py  models.py  views.py
accounts/templates/accounts/: login.html  register.html
blog/: models.py  urls.py  views.py
blog/templates/blog/: base.html  blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: initial_data.json
catalog/management/commands/: add_test_products.py  create_moderator_group.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_status.py  0003_product_owner.py  urls.py
catalog/templates/catalog/: base.html  contacts.html  home.html  menu.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  products_by_category.html
config/: settings.py  urls.py
